--- a/transactions.html
+++ b/transactions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/styles.CSS">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Nikel - Lançamentos</title>
@@ -56,14 +56,15 @@
                             <div class="col">
                                 <table class="table">
                                     <thead>
-                                        <tr>
+                                        <tr class="text-center">
                                             <th scope="col">Data</th>
                                             <th scope="col">Valor</th>
                                             <th scope="col">Tipo</th>
                                             <th scope="col">Descrição</th>
+                                            <th scope="col">Ação</th>
                                         </tr>
                                     </thead>
-                                    <tbody id="transaction-list">
+                                    <tbody class="text-center align-middle" id="transaction-list">
                                  
                                     </tbody>
                                 </table>
@@ -109,7 +110,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="button-cancel" data-bs-dismiss="modal">Cancelar</button>
-                            <button type="submit" class="button-default">Adicionar</button>
+                            <button type="submit" id="button-add" class="button-default">Adicionar</button>
                         </div>
                     </form>
                 </div>
